Add Magic Square problem and solution
Introduced a new section for array fill-up problems, specifically the Magic Square problem. Added markdown explanations, sample matrix, and two code cells implementing the algorithm for generating and displaying a magic square for a given odd integer n.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -675,20 +675,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31e0f466-a48c-467c-816c-e059ef5f84b1",
+   "cell_type": "markdown",
+   "id": "54b4c010-445a-4e48-9c8e-8c1cf2f28c35",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Array Fill-up Problems"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8c1397c-09d3-436c-bc1b-f5e2d96984db",
+   "cell_type": "markdown",
+   "id": "cc8411e1-6d2d-48e5-b89b-04fe5486c00a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Magic Square "
+   ]
   },
   {
    "cell_type": "code",
@@ -696,7 +696,11 @@
    "id": "1c2837c2-98a8-4e79-8660-bd40a3f77a85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Magic Square is the matrix with dimension n x n (where n is the given ODD integer numbers). This matrix will have to be filled up with numbers ranging\n",
+    "from 1 to n ^ 2 using them once in a way such that all row-wise, column-wise and major diagonal-wise sum of numbers are equal to each other. The matrix \n",
+    "thus obtained is called Magic Sum and total sum thus is called Magic Sum "
+   ]
   },
   {
    "cell_type": "code",
@@ -704,7 +708,18 @@
    "id": "329c1193-06ff-48be-ac41-99a5aefb8a7c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 5 (user given ODD integer)\n",
+    "\n",
+    "    0  1  2  3  4                *   *   *   *\n",
+    "---------------------           **  **  **  **\n",
+    "0 |       1  8                  *   **  **  *\n",
+    "1 |    5  7 \n",
+    "2 | 4\n",
+    "3 |             3\n",
+    "4 |          2\n",
+    "---------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -712,12 +727,146 @@
    "id": "6be606a6-21c3-4fac-9c39-4e396a07dc55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"Enter an ODD number:\"))\n",
+    "\n",
+    "if n % 2 == 1:\n",
+    "    square = [[0 for _ in range(n)] for _ in range(n)]\n",
+    "\n",
+    "    row = 0\n",
+    "    col = n // 2\n",
+    "    for num in range(1, n * n + 1):\n",
+    "        square[row][col] = num\n",
+    "\n",
+    "    prev_row, prev_col = row, col\n",
+    "\n",
+    "    row = (row - 1) % n\n",
+    "    col = (col + 1) % n\n",
+    "    \n",
+    "    if square[row][col] != 0:  # If filled, move down\n",
+    "            row = (prev_row + 1) % n\n",
+    "            col = prev_col\n",
+    "\n",
+    "    for r in square:\n",
+    "        print(\" \".join(f\"{val:2}\" for val in r))\n",
+    "\n",
+    "    print(\"\\nMagic Sum =\", sum(square[0]))\n",
+    "else:\n",
+    "    print(\"Please enter an ODD number.\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c1d93a24-249e-4935-b8c2-eca80b31d1f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "502c7039-0003-43d2-9811-42b558a5681a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba7c5bf1-d264-4082-819a-1b11f9808b45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "193cf3e9-9710-442a-aec8-e6280008d2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d14c58-d859-40e4-86ea-a76cc06768c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a62ae3ca-92a2-4ce9-8273-d01a07c52e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f16f71c7-9efa-432b-a403-a11bcf9ec9cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter an odd number (n):  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 39 48  1 10 19 28\n",
+      "38 47  7  9 18 27 29\n",
+      "46  6  8 17 26 35 37\n",
+      " 5 14 16 25 34 36 45\n",
+      "13 15 24 33 42 44  4\n",
+      "21 23 32 41 43  3 12\n",
+      "22 31 40 49  2 11 20\n",
+      "\n",
+      "Magic Sum = 175\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter an odd number (n): \"))\n",
+    "\n",
+    "\n",
+    "if n % 2 == 1:\n",
+    "    \n",
+    "    square = [[0 for _ in range(n)] for _ in range(n)]\n",
+    "\n",
+    "    row = 0\n",
+    "    col = n // 2  \n",
+    "\n",
+    "    for num in range(1, n * n + 1):\n",
+    "        square[row][col] = num  # current number\n",
+    "\n",
+    "        prev_row, prev_col = row, col  # previous position storing\n",
+    "\n",
+    "        \n",
+    "        row = (row - 1) % n   # next position: up one row, right one column\n",
+    "        col = (col + 1) % n\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36958dc4-bd27-4ef7-ba3d-eb3d7a811846",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25ddc692-45ed-41a1-95e4-5708ae1ac394",
    "metadata": {},
    "outputs": [],
    "source": []
