--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -723,27 +723,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "6be606a6-21c3-4fac-9c39-4e396a07dc55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter an odd number (n):  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 39 48  1 10 19 28\n",
+      "38 47  7  9 18 27 29\n",
+      "46  6  8 17 26 35 37\n",
+      " 5 14 16 25 34 36 45\n",
+      "13 15 24 33 42 44  4\n",
+      "21 23 32 41 43  3 12\n",
+      "22 31 40 49  2 11 20\n",
+      "\n",
+      "Magic Sum = 175\n"
+     ]
+    }
+   ],
    "source": [
-    "n = int(input(\"Enter an ODD number:\"))\n",
+    "n = int(input(\"Enter an odd number (n): \"))\n",
+    "\n",
     "\n",
     "if n % 2 == 1:\n",
+    "    \n",
     "    square = [[0 for _ in range(n)] for _ in range(n)]\n",
     "\n",
     "    row = 0\n",
-    "    col = n // 2\n",
+    "    col = n // 2  \n",
+    "\n",
     "    for num in range(1, n * n + 1):\n",
-    "        square[row][col] = num\n",
+    "        square[row][col] = num  # current number\n",
     "\n",
-    "    prev_row, prev_col = row, col\n",
+    "        prev_row, prev_col = row, col  # previous position storing\n",
     "\n",
-    "    row = (row - 1) % n\n",
-    "    col = (col + 1) % n\n",
-    "    \n",
-    "    if square[row][col] != 0:  # If filled, move down\n",
+    "        \n",
+    "        row = (row - 1) % n   # next position: up one row, right one column\n",
+    "        col = (col + 1) % n\n",
+    "\n",
+    "        if square[row][col] != 0:  # If filled, move down\n",
     "            row = (prev_row + 1) % n\n",
     "            col = prev_col\n",
     "\n",
@@ -752,7 +779,7 @@
     "\n",
     "    print(\"\\nMagic Sum =\", sum(square[0]))\n",
     "else:\n",
-    "    print(\"Please enter an ODD number.\")"
+    "    print(\"Please enter an ODD number.\")\n"
    ]
   },
   {
@@ -805,55 +832,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "f16f71c7-9efa-432b-a403-a11bcf9ec9cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter an odd number (n):  7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30 39 48  1 10 19 28\n",
-      "38 47  7  9 18 27 29\n",
-      "46  6  8 17 26 35 37\n",
-      " 5 14 16 25 34 36 45\n",
-      "13 15 24 33 42 44  4\n",
-      "21 23 32 41 43  3 12\n",
-      "22 31 40 49  2 11 20\n",
-      "\n",
-      "Magic Sum = 175\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input(\"Enter an odd number (n): \"))\n",
-    "\n",
-    "\n",
-    "if n % 2 == 1:\n",
-    "    \n",
-    "    square = [[0 for _ in range(n)] for _ in range(n)]\n",
-    "\n",
-    "    row = 0\n",
-    "    col = n // 2  \n",
-    "\n",
-    "    for num in range(1, n * n + 1):\n",
-    "        square[row][col] = num  # current number\n",
-    "\n",
-    "        prev_row, prev_col = row, col  # previous position storing\n",
-    "\n",
-    "        \n",
-    "        row = (row - 1) % n   # next position: up one row, right one column\n",
-    "        col = (col + 1) % n\n",
-    "\n",
-    "        \n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
