Add magic square matrix generation example
Introduced a new code cell that prompts for an odd number of layers, generates a magic square matrix, and displays the result. Also removed an unnecessary blank line from a previous cell.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -753,7 +753,6 @@
    "source": [
     "n = int(input(\"Enter an odd number (n): \"))\n",
     "\n",
-    "\n",
     "if n % 2 == 1:\n",
     "    \n",
     "    square = [[0 for _ in range(n)] for _ in range(n)]\n",
@@ -784,11 +783,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "c1d93a24-249e-4935-b8c2-eca80b31d1f2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please Enter the number of layers: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filling up the matrix\n",
+      "Displaying the matrix\n",
+      "  17  24   1   8  15\n",
+      "  23   5   7  14  16\n",
+      "   4   6  13  20  22\n",
+      "  10  12  19  21   3\n",
+      "  11  18  25   2   9\n",
+      "End of the program\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please Enter the number of layers:\"))\n",
+    "    if n % 2 == 1:\n",
+    "        break\n",
+    "matrix = [[0 for _ in range(n)] for _ in range(n)]\n",
+    "# print(matrix)\n",
+    "print(\"Filling up the matrix\")\n",
+    "row = 0\n",
+    "col = n // 2\n",
+    "for value in range(1, n * n + 1):\n",
+    "    matrix[row][col] = value\n",
+    "    row -= 1; col += 1\n",
+    "    if row == -1 and col == n:\n",
+    "        row += 2\n",
+    "        col -= 1\n",
+    "    elif row == -1:\n",
+    "        row = n - 1\n",
+    "    elif col == n:\n",
+    "        col = 0\n",
+    "    elif matrix[row][col] != 0:\n",
+    "        row += 2\n",
+    "        col -= 1\n",
+    "\n",
+    "print(\"Displaying the matrix\")\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        print(\"%4d\" %matrix[row][col], end = \"\")\n",
+    "    print()\n",
+    "print(\"End of the program\")\n"
+   ]
   },
   {
    "cell_type": "code",
