Add headers and update output in Day 1 notebook
Added section headers to code cells for clarity and updated sample input/output for the matrix implementation to use n=9 instead of n=5. Converted an empty code cell to markdown explaining the magic sum formula.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -751,6 +751,8 @@
     }
    ],
    "source": [
+    "# Implementation - 1\n",
+    "\n",
     "n = int(input(\"Enter an odd number (n): \"))\n",
     "\n",
     "if n % 2 == 1:\n",
@@ -783,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "c1d93a24-249e-4935-b8c2-eca80b31d1f2",
    "metadata": {},
    "outputs": [
@@ -791,7 +793,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please Enter the number of layers: 5\n"
+      "Please Enter the number of layers: 9\n"
      ]
     },
     {
@@ -800,16 +802,22 @@
      "text": [
       "Filling up the matrix\n",
       "Displaying the matrix\n",
-      "  17  24   1   8  15\n",
-      "  23   5   7  14  16\n",
-      "   4   6  13  20  22\n",
-      "  10  12  19  21   3\n",
-      "  11  18  25   2   9\n",
+      "  47  58  69  80   1  12  23  34  45\n",
+      "  57  68  79   9  11  22  33  44  46\n",
+      "  67  78   8  10  21  32  43  54  56\n",
+      "  77   7  18  20  31  42  53  55  66\n",
+      "   6  17  19  30  41  52  63  65  76\n",
+      "  16  27  29  40  51  62  64  75   5\n",
+      "  26  28  39  50  61  72  74   4  15\n",
+      "  36  38  49  60  71  73   3  14  25\n",
+      "  37  48  59  70  81   2  13  24  35\n",
       "End of the program\n"
      ]
     }
    ],
    "source": [
+    "# Implementation - 2\n",
+    "\n",
     "while(True):\n",
     "    n = int(input(\"Please Enter the number of layers:\"))\n",
     "    if n % 2 == 1:\n",
@@ -842,12 +850,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "502c7039-0003-43d2-9811-42b558a5681a",
+   "cell_type": "markdown",
+   "id": "e82dcc77-ff54-4963-b7ac-4b7f1cc9b62f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## So from n magic sum is n * (1 + n * n) // 2"
+   ]
   },
   {
    "cell_type": "code",
