Add spiral matrix fill algorithm and examples
Introduced a new section explaining and demonstrating how to fill an n x n matrix in a clockwise spiral order. Added code, sample output, and explanatory markdown for spiral matrix generation, alongside improved magic square notes and examples.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -709,16 +709,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 5 (user given ODD integer)\n",
+    "n = 5 (User given ODD integer)                row = 0, col = n // 2\n",
+    "                              *  *  *  *      row -= 1, col += 1\n",
+    "     0   1   2   3   4       ** ** ** **\n",
+    "------------------------    * ** ** ** *\n",
+    "0 | 17  24   1   8  15     *  *  *  *\n",
+    "1 | 23   5   7  14  16     1. Out of range\n",
+    "2 |  4   6  13  20  22        2/3. row-wise folding: if (row == -1) then row = (n - 1) \n",
+    "3 | 10  12  19  21   3        3/2. col-wise folding: if (col == n) then col = 0\n",
+    "4 | 11  18  25   2   9        1. corner logic: if (row == -1 and col == n) then row += 2 and col -= 1\n",
+    "------------------------   2. Pre-occupied\n",
+    "Magic Sum = 65                4. if (matrix[row][col] != 0) then row += 2 and col -= 1\n",
     "\n",
-    "    0  1  2  3  4                *   *   *   *\n",
-    "---------------------           **  **  **  **\n",
-    "0 |       1  8                  *   **  **  *\n",
-    "1 |    5  7 \n",
-    "2 | 4\n",
-    "3 |             3\n",
-    "4 |          2\n",
-    "---------------------"
+    "n = 3 (User given ODD integer)\n",
+    "     \n",
+    "     0   1   2\n",
+    "----------------\n",
+    "0 |  8   1   6  \n",
+    "1 |  3   5   7  \n",
+    "2 |  4   9   2  \n",
+    "------------------------\n",
+    "Magic Sum = 15"
    ]
   },
   {
@@ -858,12 +869,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba7c5bf1-d264-4082-819a-1b11f9808b45",
+   "cell_type": "markdown",
+   "id": "c179d64b-4b72-452f-bf7f-c282a741e1f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Spiral Fillup of a matrix"
+   ]
   },
   {
    "cell_type": "code",
@@ -871,20 +882,89 @@
    "id": "193cf3e9-9710-442a-aec8-e6280008d2ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Fill up a marix with dimension nxn (where is a user given integer number) with numbers ranging from 1 to n^2.\n",
+    "Use these numbers once in a clockwise spiral fashion starting from top-left corner.\n",
+    "\n",
+    "n = 5 (user given integer)\n",
+    "\n",
+    "     0   1   2   3   4\n",
+    "------------------------\n",
+    "0 |  1   2   3   4   5\n",
+    "1 |  16  17  18  19  6\n",
+    "2 |  15  24  25  20  7\n",
+    "3 |  14  23  22  21  8\n",
+    "4 |  13  12  11  10  9\n",
+    "------------------------"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "72d14c58-d859-40e4-86ea-a76cc06768c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 |  1   2   3   4   5\n",
+      "1 | 16  17  18  19   6\n",
+      "2 | 15  24  25  20   7\n",
+      "3 | 14  23  22  21   8\n",
+      "4 | 13  12  11  10   9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter a number \"))\n",
+    "matrix = [[0] * n for _ in range(n)]\n",
+    "\n",
+    "num = 1\n",
+    "top = 0\n",
+    "bottom = n - 1\n",
+    "left = 0\n",
+    "right = n - 1\n",
+    "\n",
+    "while top <= bottom and left <= right:\n",
+    "    \n",
+    "    for i in range(left, right + 1):\n",
+    "        matrix[top][i] = num\n",
+    "        num += 1\n",
+    "    top += 1\n",
+    "    \n",
+    "    for i in range(top, bottom + 1):\n",
+    "        matrix[i][right] = num\n",
+    "        num += 1\n",
+    "    right -= 1\n",
+    "\n",
+    "    for i in range(right, left - 1, -1):\n",
+    "        matrix[bottom][i] = num\n",
+    "        num += 1\n",
+    "    bottom -= 1\n",
+    "\n",
+    "    for i in range(bottom, top - 1, -1):\n",
+    "        matrix[i][left] = num\n",
+    "        num += 1\n",
+    "    left += 1 \n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range(n):\n",
+    "    print(f\"{i} | \" + \"  \".join(f\"{matrix[i][j]:2}\" for j in range(n)))\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62ae3ca-92a2-4ce9-8273-d01a07c52e6d",
+   "id": "a09b9ddb-0c71-44ba-9d64-e5837fc8e024",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -909,6 +989,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "25ddc692-45ed-41a1-95e4-5708ae1ac394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ae98e6-71ff-485a-a006-046d2226b4cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf440df-2e35-48d2-9bb1-839eec0f84e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "097e6d3e-c1f2-4692-bb68-4ffdeb3f2da2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad9b646d-fb61-4182-93cf-6f0832cf84fc",
    "metadata": {},
    "outputs": [],
    "source": []
