Add spiral matrix implementation and output
Introduced a second implementation for generating and displaying a spiral matrix, including sample input/output. Also added section headers for clarity.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -924,6 +924,7 @@
     }
    ],
    "source": [
+    "# Implementation - 1\n",
     "n = int(input(\"Enter a number \"))\n",
     "matrix = [[0] * n for _ in range(n)]\n",
     "\n",
@@ -963,11 +964,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "a09b9ddb-0c71-44ba-9d64-e5837fc8e024",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the dimensions of the matrix: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filling up the matrix\n",
+      "Displaying content of the matrix:\n",
+      "   1   2   3   4   5\n",
+      "  16  17  18  19   6\n",
+      "  15  24  25  20   7\n",
+      "  14  23  22  21   8\n",
+      "  13  12  11  10   9\n",
+      "End of the program\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Impelmentation - 2\n",
+    "n = int(input(\"Enter the dimensions of the matrix:\"))\n",
+    "matrix = [[0 for _ in range(n)]  for _ in range(n)]\n",
+    "\n",
+    "\n",
+    "row = col = rr = 0\n",
+    "cc = 1\n",
+    "print(\"Filling up the matrix\")\n",
+    "for value in range(1, n * n + 1):\n",
+    "    matrix[row][col] = value\n",
+    "    tr = row + rr\n",
+    "    tc = col + cc\n",
+    "    if tc == n or tr == n or tc == -1 or matrix[tr][tc] != 0:\n",
+    "        rr, cc = cc, -rr\n",
+    "    row = row + rr\n",
+    "    col = col + cc\n",
+    "\n",
+    "print(\"Displaying content of the matrix:\")\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        print(\"%4d\" %matrix[row][col], end = \"\")\n",
+    "    print()\n",
+    "print(\"End of the program\")\n"
+   ]
   },
   {
    "cell_type": "code",
