Clarify spiral matrix problem statement
Improved the explanation for the spiral matrix problem by correcting a typo and adding details about row/column indices and movement logic. This provides clearer guidance for implementing the spiral traversal.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -883,19 +883,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fill up a marix with dimension nxn (where is a user given integer number) with numbers ranging from 1 to n^2.\n",
+    "Fill up a marix with dimension nxn (where n is a user given integer number) with numbers ranging from 1 to n^2.\n",
     "Use these numbers once in a clockwise spiral fashion starting from top-left corner.\n",
-    "\n",
-    "n = 5 (user given integer)\n",
-    "\n",
-    "     0   1   2   3   4\n",
-    "------------------------\n",
-    "0 |  1   2   3   4   5\n",
-    "1 |  16  17  18  19  6\n",
-    "2 |  15  24  25  20  7\n",
-    "3 |  14  23  22  21  8\n",
-    "4 |  13  12  11  10  9\n",
-    "------------------------"
+    "                             row => current row number, initially row = 0\n",
+    "n = 5 (user given integer)   col => current col number, initially col = 0\n",
+    "                             rr => increment/decrement factor along the row (-1, 0, +1)\n",
+    "     0   1   2   3   4       cc => increment/decrement factor along the col (-1, 0, +1)\n",
+    "------------------------     default formula => row = row + rr and col = col + cc\n",
+    "0 |  1   2   3   4   5       rr  cc   rr, cc = cc, -rr\n",
+    "1 |  16  17  18  19  6      --------  if (col == n)\n",
+    "2 |  15  24  25  20  7        0   1   if (row == n)\n",
+    "3 |  14  23  22  21  8        1   0   if (col == -1)\n",
+    "4 |  13  12  11  10  9        0  -1   if (matrix[row][col] != 0)\n",
+    "------------------------     -1   0\n",
+    "                            --------\n",
+    "                              0   1"
    ]
   },
   {
