Add Day 2 notebook and homework to Day 1
Added 'Problem Solving - Day 2.ipynb' with solutions for finding the second largest number and closest divisor problems. Updated 'Problem Solving - Day 1.ipynb' to fix a typo, add a homework problem about digit rotation and multiplication, and provide code solutions for it.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -883,7 +883,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fill up a marix with dimension nxn (where n is a user given integer number) with numbers ranging from 1 to n^2.\n",
+    "Fill up a matrix with dimension nxn (where n is a user given integer number) with numbers ranging from 1 to n^2.\n",
     "Use these numbers once in a clockwise spiral fashion starting from top-left corner.\n",
     "                             row => current row number, initially row = 0\n",
     "n = 5 (user given integer)   col => current col number, initially col = 0\n",
@@ -1019,12 +1019,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f16f71c7-9efa-432b-a403-a11bcf9ec9cf",
+   "cell_type": "markdown",
+   "id": "a5814e68-f16c-4a6f-829a-678169142356",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# HomeWork Problem"
+   ]
   },
   {
    "cell_type": "code",
@@ -1032,15 +1032,45 @@
    "id": "36958dc4-bd27-4ef7-ba3d-eb3d7a811846",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Find out all possible such numbers that when multiplied by 3, the result will have the first digit will\n",
+    "Come at the last, and all other digits will have the same sequence in the result\n",
+    "\n",
+    "As Example - \n",
+    "\n",
+    "if the number is:       x, y..... z\n",
+    "                                * 3\n",
+    "                        ------------\n",
+    "                        y....    zx"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "25ddc692-45ed-41a1-95e4-5708ae1ac394",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142857\n",
+      "285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "while n <= 999999:\n",
+    "    s = str(n)\n",
+    "    t = str(3 * n)\n",
+    "\n",
+    "    if len(t) == len(s):\n",
+    "        # if 3*n is s without its first char, plus that first char at the end\n",
+    "        if t == s[1:] + s[0]:\n",
+    "            print(n)\n",
+    "    n += 1\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1073,6 +1103,44 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb6d0153-8396-4df7-a8e4-4cb9486e11df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a0ccf9-604d-4f96-885a-2a25c56b8cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62de648e-0be0-4c2f-941d-1bde777a0df4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3061313-343f-41f0-82a7-d83b7acb75f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(1000, 1000000):\n",
+    "    num_str = str(num)\n",
+    "    rotated = num_str[1:] + num_str[0]\n",
+    "    if int(rotated) == num * 3:\n",
+    "        print(\"The number is:\", num)\n"
+   ]
   }
  ],
  "metadata": {
