Add new logic examples and solutions to notebook
Introduced multiple new code cells demonstrating different problem-solving logics, including finding the second largest of three numbers, largest divisible number, divisibility checks, and digit extraction. Updated existing cells for clarity and added empty cells for future use.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -42,14 +42,60 @@
     }
    ],
    "source": [
-    "n = int(input(\"Enter number of numbers: \"))\n",
-    "arr = []\n",
-    "for i in range(n):\n",
-    "    num = int(input(f\"Enter number {i + 1}: \"))\n",
-    "    arr.append(num)\n",
+    "# Logic - 1\n",
+    "A = int(input())\n",
+    "B = int(input())\n",
+    "C = int(input())\n",
     "\n",
-    "arr.sort()\n",
-    "print(\"Second largest number is:\", arr[-2])\n"
+    "num = [A, B, C]\n",
+    "\n",
+    "num.sort()\n",
+    "print(num[-2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99b661e0-e8b3-4041-87ec-8a908f67df00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 15\n",
+      " 28\n",
+      " 21\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 15 21\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logic - 2\n",
+    "A = int(input())\n",
+    "B = int(input())\n",
+    "C = int(input())\n",
+    "\n",
+    "if (A > B):\n",
+    "    max1 = A\n",
+    "    max2 = B\n",
+    "else:\n",
+    "    max1 = B\n",
+    "    max2 = A\n",
+    "\n",
+    "if C >= max1:\n",
+    "    print(max1)\n",
+    "elif C >= max2:\n",
+    "    print(C)\n",
+    "else:\n",
+    "    print(max2)"
    ]
   },
   {
@@ -180,15 +226,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Input reading\n",
+    "\n",
     "A = int(input())\n",
     "B = int(input())\n",
     "\n",
-    "# Find the largest number ≤ A divisible by B\n",
+    "\n",
     "result = A - (A % B)\n",
     "\n",
-    "# Output the result\n",
+    "\n",
     "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16437828-f861-454b-a4d9-ef354a603ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7348859-3ff9-4455-8f5a-30d0d21c947c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9835bc02-d83c-4608-93c0-198275f4be14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b59a8b09-1995-44d7-8ae0-aad1a91a14ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d701cf3c-4e01-4972-a742-d85f33a48ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "# Logic as per the problem statement\n",
+    "if N % 3 != 0:\n",
+    "    print(-1)\n",
+    "elif N % 2 == 1:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47c39edc-15eb-469d-b864-6c56105b23fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce612cd-2153-41d3-8e9d-a6bd9ee3b12c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3edcf281-9257-47dd-a316-845fdcb1fc45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba3c97a-7de4-4581-87da-c1d8fb2cfea8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b53b348-c6e7-4520-b108-ffb18b4050e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read input\n",
+    "N = int(input())\n",
+    "\n",
+    "# Get the second last digit (tens place)\n",
+    "second_last_digit = (N // 10) % 10\n",
+    "\n",
+    "# Check if it is 7\n",
+    "if second_last_digit == 7:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)\n"
    ]
   }
  ],
