Add solution for 'Not Last' problem and update notebook
Replaced the 'Closest Divisor' problem with the 'Not Last' problem, which checks if the second last digit of an integer is 7. Added corresponding code cells for the new problem and updated other cells for clarity and consistency.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -103,8 +103,9 @@
    "id": "e5b588ec-6bbc-40d3-94dd-9fc13fd1710d",
    "metadata": {},
    "source": [
-    "## Closest Divisor\n",
-    "Given two integers A and B, find the largest number  which is completely divisible by B\n"
+    "## Not Last\n",
+    "Given an integer N, check if its second last digit is 7 or not. If the second last digit is 7, print 1, else print 0.\n",
+    "\n"
    ]
   },
   {
@@ -113,7 +114,15 @@
    "id": "380a8b03-0ad5-4b2c-96e8-2df279c7c8f9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N = int(input())\n",
+    "s_l = (N // 10) % 10\n",
+    "\n",
+    "if s_l == 7:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
+   ]
   },
   {
    "cell_type": "code",
@@ -177,7 +186,19 @@
    "id": "a2a81197-570a-4002-baad-f9c90238b786",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read input Closest Divisor\n",
+    "N = int(input())\n",
+    "\n",
+    "# Get the second last digit (tens place)\n",
+    "second_last_digit = (N // 10) % 10\n",
+    "\n",
+    "# Check if it is 7\n",
+    "if second_last_digit == 7:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
+   ]
   },
   {
    "cell_type": "code",
@@ -226,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Odd Even Multiple\n",
     "A = int(input())\n",
     "B = int(input())\n",
     "\n",
@@ -310,7 +331,16 @@
    "id": "3edcf281-9257-47dd-a316-845fdcb1fc45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Raju and His Trip\n",
+    "N = int(input())\n",
+    "\n",
+    "# Check if the bus number is divisible by 5 or 6\n",
+    "if N % 5 == 0 or N % 6 == 0:\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -326,19 +356,7 @@
    "id": "5b53b348-c6e7-4520-b108-ffb18b4050e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Read input\n",
-    "N = int(input())\n",
-    "\n",
-    "# Get the second last digit (tens place)\n",
-    "second_last_digit = (N // 10) % 10\n",
-    "\n",
-    "# Check if it is 7\n",
-    "if second_last_digit == 7:\n",
-    "    print(1)\n",
-    "else:\n",
-    "    print(0)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
