Add solutions for Closest Divisor, Odd Even Multiple, and Alchemy problems
Implemented code cells for the Closest Divisor and Odd Even Multiple problems, including problem statements in markdown. Added a solution for the Full Barrier Alchemy problem. Removed unused or duplicate code cells to clean up the notebook.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -125,28 +125,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "434ade63-462e-4014-8ff1-435c63bd58e7",
+   "cell_type": "markdown",
+   "id": "f1c13efe-8697-4635-b378-a068cab09c30",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Closest Divisor\n",
+    "Given two integers A and B, find the largest number ≤ A which is completely divisible by B"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "be30af47-13d8-4603-832f-afaa8e754670",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 11\n",
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = int(input())\n",
+    "B = int(input())\n",
+    "\n",
+    "\n",
+    "result = A - (A % B)\n",
+    "\n",
+    "\n",
+    "print(result)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41373651-1bc4-430f-8706-9cdf5f616b58",
+   "cell_type": "markdown",
+   "id": "f9083e45-f2bb-4bf3-ba2c-4cff1b6b10ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Odd Even Multiple\n",
+    "Odd Even Multiple\n",
+    "Given an integer N,\n",
+    "1. If N is not divisible by 3 then print -1,\n",
+    "2. If N is an odd multiple of 3 then print 1\n",
+    "3. If N is an even multiple of 3 then print 0."
+   ]
   },
   {
    "cell_type": "code",
@@ -154,7 +185,18 @@
    "id": "bdaed6bb-5ce3-4d5b-9359-9ca2e008d499",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "# Logic as per the problem statement\n",
+    "if N % 3 != 0:\n",
+    "    print(-1)\n",
+    "elif N % 2 == 1:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -186,19 +228,7 @@
    "id": "a2a81197-570a-4002-baad-f9c90238b786",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Read input Closest Divisor\n",
-    "N = int(input())\n",
-    "\n",
-    "# Get the second last digit (tens place)\n",
-    "second_last_digit = (N // 10) % 10\n",
-    "\n",
-    "# Check if it is 7\n",
-    "if second_last_digit == 7:\n",
-    "    print(1)\n",
-    "else:\n",
-    "    print(0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -246,17 +276,7 @@
    "id": "006413d6-3693-4e9c-849b-0ac76cd44101",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Odd Even Multiple\n",
-    "A = int(input())\n",
-    "B = int(input())\n",
-    "\n",
-    "\n",
-    "result = A - (A % B)\n",
-    "\n",
-    "\n",
-    "print(result)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -356,7 +376,36 @@
    "id": "5b53b348-c6e7-4520-b108-ffb18b4050e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T = int(input())  # Full barrier Alchemy\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, H, Y1, Y2, L = map(int, input().split())\n",
+    "\n",
+    "    count = 0  # Number of barriers passed\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        t, X = map(int, input().split())\n",
+    "\n",
+    "        if t == 1:\n",
+    "            if X < Y1:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                L -= 1\n",
+    "                if L == 0:\n",
+    "                    break\n",
+    "                count += 1\n",
+    "        elif t == 2:\n",
+    "            if X > Y2:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                L -= 1\n",
+    "                if L == 0:\n",
+    "                    break\n",
+    "                count += 1\n",
+    "\n",
+    "    print(count)\n"
+   ]
   }
  ],
  "metadata": {
