Update Problem Solving - Day 2.ipynb

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "52db6103-be49-4aec-84dd-c8acf6f4381c",
    "metadata": {},
    "outputs": [
@@ -27,17 +27,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter number of numbers:  3\n",
-      "Enter number 1:  21\n",
-      "Enter number 2:  54\n",
-      "Enter number 3:  85\n"
+      " 25\n",
+      " 14\n",
+      " 89\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Second largest number is: 54\n"
+      "25\n"
      ]
     }
    ],
@@ -181,10 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bdaed6bb-5ce3-4d5b-9359-9ca2e008d499",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 21\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "N = int(input())\n",
@@ -199,20 +213,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e65b7a1e-401b-48ac-accd-b4c0205d8bd0",
+   "cell_type": "markdown",
+   "id": "48b7bf45-5549-4edf-9eb0-b83852da6529",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Raju and His Trip"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0aed91e3-032f-4602-81e8-d4bc15b492d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "if N % 5 == 0 or N % 6 == 0:\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -316,18 +352,7 @@
    "id": "d701cf3c-4e01-4972-a742-d85f33a48ad7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "N = int(input())\n",
-    "\n",
-    "# Logic as per the problem statement\n",
-    "if N % 3 != 0:\n",
-    "    print(-1)\n",
-    "elif N % 2 == 1:\n",
-    "    print(1)\n",
-    "else:\n",
-    "    print(0)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -351,16 +376,7 @@
    "id": "3edcf281-9257-47dd-a316-845fdcb1fc45",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Raju and His Trip\n",
-    "N = int(input())\n",
-    "\n",
-    "# Check if the bus number is divisible by 5 or 6\n",
-    "if N % 5 == 0 or N % 6 == 0:\n",
-    "    print(\"YES\")\n",
-    "else:\n",
-    "    print(\"NO\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -405,6 +421,62 @@
     "                count += 1\n",
     "\n",
     "    print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c604e9-bead-4403-bee4-fb8388526937",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5ddbc5-b8f2-41e3-a1ee-02efdc3f03d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12e709ac-9120-43ed-9fd5-1e08ebe70743",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b31aaad-1f69-4b23-95b2-a99230775dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd4530cf-79fb-4f10-8fdb-201a4e6b8084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cats and Dogs\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    C, D, L = map(int, input().split())\n",
+    "\n",
+    "    # Calculate maximum and minimum possible leg counts\n",
+    "    max_legs = 4 * (C + D)\n",
+    "    min_legs = 4 * (D + max(0, C - 2 * D))\n",
+    "\n",
+    "    # Check validity\n",
+    "    if L % 4 == 0 and min_legs <= L <= max_legs:\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n"
    ]
   }
  ],
